--- a/app/app.css
+++ b/app/app.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
+@plugin 'tailwindcss-animate';
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-sans: "Noto Serif", ui-sans-serif, system-ui, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+
+  --color-app-orange-500: #de7645;
 }
 
 html,
