--- a/app/app.css
+++ b/app/app.css
@@ -5,6 +5,7 @@
   --font-sans: "Noto Serif", ui-sans-serif, system-ui, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 
+  --color-app-orange-50: #f8dfc9;
   --color-app-orange-500: #de7645;
 }
 
